--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -9,8 +9,8 @@
     padding-top: 35px;
     background-color: $backroungd-cards;
     margin-top: 40px;
+
     .restaurant__cards { 
-   
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -22,19 +22,72 @@
                 background-color: white;
                 border-radius: 15px;
                 padding-bottom: 10px;
+                position: relative;
 
                 .card__image {
-                    height: 231px;
+                    height: 200px;
                     width:100%;
                     border-radius: 15px 15px 0 0;
                 }
+                .card__news {
+                    border-radius:2px;
+                    width: 80px;
+                    height: 29px;
+                    background-color:rgba(153, 226, 208, 1);
+                    color: rgb(0, 135, 102);
+                    display: flex; /* Utilisation de flexbox */
+                    align-items: center; /* Centrage vertical */
+                    justify-content: center; /* Centrage horizontal */
+                    position: absolute;
+                    top: 15px; /* Ajustez la valeur selon votre préférence */
+                    right: 15px; /* Ajustez la valeur selon votre préférence */
 
+                
+                }
+                
                 .card__txt {
+                    display: flex;
+                    flex-direction: column; 
+                    margin:10px;
+                }
+                .card__text {
                     display: flex;
                     flex-direction: row; /* Assurez-vous que les éléments enfants sont alignés horizontalement */
                     justify-content: space-between; /* Place les éléments à l'extrémité de chaque ligne */
                     align-items: center; /* Aligne les éléments verticalement au centre */
                     padding-left: 5px;
+                    
+
+                    /* Style de base de l'icône de cœur */
+                    .heart-icon {
+                        display: inline-block;
+                        width: 24px;
+                        height: 24px;
+                        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"/></svg>');
+                        background-size: cover;
+                        cursor: pointer; /* Ajoute un curseur pointer pour indiquer que l'icône est cliquable */
+                    }
+
+                    /* Style de l'icône de cœur rempli lorsque la case à cocher est cochée */
+                    #heart-checkbox:checked + .heart-icon {
+                        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>');
+                        fill:linear-gradient(to left, rgba(147, 86, 220, 0.8), rgba(255, 121, 218, 0.8));
+                    }
+
+                    /* CSS pour cacher l'élément input */
+                    .visually-hidden {
+                        position: absolute;
+                        width: 1px;
+                        height: 1px;
+                        margin: -1px;
+                        padding: 0;
+                        overflow: hidden;
+                        clip: rect(0, 0, 0, 0);
+                        border: 0;
+                    }
+
+
+
                 }
     
             }
