--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -98,8 +98,16 @@ body {
                 width: 218px;
                 height: 50px;
                 color: white;
-                background-color: $primary-color;
+                background-image: linear-gradient(to left, rgba(147, 86, 220, 1), rgba(255, 121, 218, 1));
                 border-radius: 20px;
+                cursor: pointer; /* Curseur pointer */
+                transition: background-color 0.5s; /* Transition en douceur */
+                font-size: 16px;
+            
+            }
+            input[type="button"]:hover {
+                background-image: linear-gradient(to left, rgba(147, 86, 220, 0.8), rgba(255, 121, 218, 0.8));
+                /* Nouvelle couleur de fond au survol */
             }
 
         }   
@@ -150,8 +158,14 @@ body {
                                 left: 20px;
                             }
 
-                            .fa-mobile-screen-button,  .fa-store {
+                            .fa-mobile-screen-button {
                                 color: rgb(126, 126, 126);
+                                margin-right: 20px;
+                                
+                            }
+                            .fa-store {
+                                color:$primary-color;
+                                margin-right: 20px;
                             }
                         }
                 
