--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 // Import des fichiers
 @import 'variables';
 @import 'mixins';
-@import 'reset';
+@import 'homepage';
 
 @import 'header';
 @import 'footer';
