--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,10 +1,6 @@
 //variables
 $primary-color:rgba(147, 86, 220, 1);
-$secondary-color: #FF79DA;
+$secondary-color: rgba(255, 121, 218, 0.8);
 $tertiary-color: #99E2D0;
 $backroungd-cards: rgba(246, 246, 246, 1);
 $font-family-text: 'Roboto', sans-serif;
-$font-family-title: 'Shrikhand', sans-serif;
-$size_family:18px;
-$size-family2:16px;/*les links avec les texts de boutton*/
-$gap: 35px;
