--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,1 +1,31 @@
- /*********footer******/
+footer {
+
+    background-color: rgb(53, 53, 53, 1);
+
+    .footer__part {
+        padding-top:16px;
+        padding-left:16px;
+        font-family: 'shrikhand';
+        font-style: italic;
+        font-size: 18px;
+        color:white;
+        }
+
+    .footer__txt {
+        @include flex-center-columun;
+        gap: 5px;
+        margin-top: 10px;
+        margin-left:16px;
+        color:white;
+        padding-bottom: 16px;
+
+        .footer__txt--link {
+            display: flex;
+            .fa-solid {
+                margin-right:10px;
+            }
+
+        }
+    }
+
+}
